@@ -14,25 +14,12 @@
     
     <properties>
         <skipTests>true</skipTests>
-        <javafx.platform>linux</javafx.platform>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.chuck</groupId>
             <artifactId>chuck-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>25.0.2</version>
-            <classifier>${javafx.platform}</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-graphics</artifactId>
-            <version>25.0.2</version>
-            <classifier>${javafx.platform}</classifier>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -98,20 +85,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <mainClass>org.chuck.deluge.ui.DelugeApp</mainClass>
-                    <options>
-                        <option>--enable-preview</option>
-                        <option>--add-modules</option>
-                        <option>jdk.incubator.vector</option>
-                    </options>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
     <profiles>
